Bug 403721 - Crashes when right-clicking in thumbnail area
Summary: Crashes when right-clicking in thumbnail area
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: Thumbnail Viewer (other bugs)
Version First Reported In: 5.4
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-29 06:52 UTC by Robert Spoden
Modified: 2019-02-04 20:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.4.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Spoden 2019-01-29 06:52:26 UTC
SUMMARY
Application crashes when right-clicking in the thumbnail viewing area

STEPS TO REPRODUCE
1. Browse images 
2. Scroll down to most recent
3. right click on area where there are no thumbnails

OBSERVED RESULT
Program crashes

EXPECTED RESULT
popup menu

SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: gentoo
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 5

ADDITIONAL INFORMATION
Comment 1 Johannes Zarl-Zierl 2019-02-01 21:48:16 UTC
Thanks for reporting this!
I can confirm that this happens also on the current git master…
Comment 2 Johannes Zarl-Zierl 2019-02-01 23:51:24 UTC
Git commit 2cbf004a3feb28f4c35683e2097363cd91a0773e by Johannes Zarl-Zierl.
Committed on 01/02/2019 at 23:47.
Pushed by johanneszarl into branch 'master'.

Fix crash when right-clicking in thumbnail view.

When opening the context menu in the thumbnail view by right-clicking
in the empty area besides the actual thumbnails, kphotoalbum would
crash.
This commit fixes the crash and makes sure only applicable context-menu
entries are enabled in this case.

M  +5    -1    MainWindow/CopyPopup.cpp
M  +6    -4    MainWindow/Window.cpp

https://commits.kde.org/kphotoalbum/2cbf004a3feb28f4c35683e2097363cd91a0773e
Comment 3 Tobias Leupold 2019-02-04 19:38:42 UTC
Git commit 137a360995dc9dac060fd60d70044741f60e1d14 by Tobias Leupold, on behalf of Johannes Zarl-Zierl.
Committed on 04/02/2019 at 19:15.
Pushed by tleupold into branch 'v5.4-bugfix'.

Fix crash when right-clicking in thumbnail view.

When opening the context menu in the thumbnail view by right-clicking
in the empty area besides the actual thumbnails, kphotoalbum would
crash.
This commit fixes the crash and makes sure only applicable context-menu
entries are enabled in this case.

M  +5    -1    MainWindow/CopyPopup.cpp
M  +6    -4    MainWindow/Window.cpp

https://commits.kde.org/kphotoalbum/137a360995dc9dac060fd60d70044741f60e1d14